# tendwell

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tendwell.example.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  dockerhub-overview.yml  release.yml
deploy/docker/: overview.md
deploy/helm/tendwell/: Chart.yaml  README.md  values.yaml
deploy/helm/tendwell/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  serviceaccount.yaml
deploy/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
deploy/terraform/examples/basic/: main.tf
docs/: add-a-data-source.md  bring-your-own-llm.md  configuration.md  launch-checklist.md  llm-compatibility.md  phase-1-spec.md  phase-2-spec.md  phase-3-spec.md  quickstart.md  register-an-executor.md  security-model.md
examples/: demo-actions.yaml  demo-instant.yaml  demo-model.yaml  demo-react.yaml  demo.yaml
tendwell/: __init__.py  __main__.py  app.py
tendwell/actions/: __init__.py  allowlist.py  approval.py  audit.py  executor.py  guards.py  pipeline.py  types.py  validation.py
tendwell/audit/: __init__.py
tendwell/config/: __init__.py  loading.py  models.py
tendwell/context/: __init__.py  chroma_store.py  embeddings.py  markdown_loader.py  memory_store.py
tendwell/core/: __init__.py  agent.py  reasoning.py  tools.py  types.py
tendwell/demo/: __init__.py  synthetic.py
tendwell/demo/knowledge/: error-rate-runbook.md  latency-postmortem.md
tendwell/interfaces/: __init__.py  context_store.py  data_source.py  llm.py  output.py
tendwell/llm/: __init__.py  fake.py  openai_backend.py  react.py  stub.py
tendwell/output/: __init__.py  console.py  findings.py
tendwell/sources/: __init__.py  errors.py  http_json.py  loki.py  prometheus.py
tests/: action_helpers.py  conftest.py  test_actions.py  test_actions_e2e.py  test_agent_e2e.py  test_config.py  test_context.py  test_daemon.py  test_http_json.py  test_instant_demo.py  test_interfaces.py  test_loki.py  test_prometheus.py  test_react_driver.py  test_react_parser.py  test_synthetic.py
