[project]
name = "tendwell"
version = "0.0.1"
description = "Self-hostable, local-first AgentOps tool that monitors production health and explains what it finds."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "The Tendwell Authors" }]
keywords = ["agentops", "observability", "monitoring", "llm", "local-first", "sre"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

# Core runtime dependencies. Kept lean on purpose: the Phase 0 scaffold needs
# only config modelling. Adapter-specific clients (openai, chromadb, fastapi,
# prometheus, mcp) are pulled in by the extras below as each phase lands.
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Phase 1 adapters and serving layer.
llm = ["openai>=1.30"]
context = ["chromadb>=0.5"]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
mcp = ["mcp>=1.0"]
prometheus = ["httpx>=0.27"]
# Convenience: everything needed to run the demo stack end to end.
all = ["tendwell[llm,context,server,mcp,prometheus]"]

[project.scripts]
tendwell = "tendwell.__main__:main"

[dependency-groups]
# The dev group installs the Phase 1 runtime deps too, so CI can exercise the
# real wiring (Chroma store, Prometheus adapter) end to end with faked LLM and
# embeddings - no network, no real model - and so mypy type-checks every module.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-pyyaml>=6.0",
    "openai>=1.30",
    "httpx>=0.27",
    "chromadb>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tendwell"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["tendwell"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

# Third-party packages without bundled type information.
[[tool.mypy.overrides]]
module = ["chromadb.*"]
ignore_missing_imports = true
